<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/about_menu_item"
        android:icon="@drawable/ic_about"
        android:title="@string/about_title" />
</menu>