<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_artists_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/artists_menu_title_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/menu_artists_order"
        android:title="@string/artists_menu_title_order"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_artists_genres"
        android:title="@string/artists_menu_title_genres"
        app:showAsAction="never" />
</menu>